[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavetap"
version = "0.1.0"
description = "Modular Python SDR Framework"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
select = ["E", "F"]
ignore = ["D205", "D107", "D401", "E501", "D200", "D100"]
line-length = 79

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
